// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should change active tab 1`] = `
<TabContainer
  activeTab={null}
  defaultTab={null}
>
  <div
    className="tabs  mko_i63we-container"
  >
    <ul
      className="tabs__controls  mko_i63we-controls"
      role="tablist"
    >
      <li
        className="tab-control  mko_i63we-tabControl"
        key="one"
        role="tab"
      >
        <Button
          className="tab-control__button"
          onClick={[Function]}
          type="button"
        >
          <button
            className="button ripple button--standard  mko_c5ujei-button  mko_c5ujei-button_standard tab-control__button"
            onClick={[Function]}
            type="button"
          >
            one
          </button>
        </Button>
      </li>
      <li
        className="tab-control tab-control--active  mko_i63we-tabControl  mko_i63we-tabControl_active"
        key="two"
        role="tab"
      >
        <Button
          className="tab-control__button"
          onClick={[Function]}
          type="button"
        >
          <button
            className="button ripple button--standard  mko_c5ujei-button  mko_c5ujei-button_standard tab-control__button"
            onClick={[Function]}
            type="button"
          >
            two
          </button>
        </Button>
      </li>
    </ul>
    <div
      className="tabs__panels  mko_i63we-panels"
    >
      <TabView
        isActive={false}
        key="one"
        name="one"
      >
        <div
          aria-hidden={true}
          className="tab-view  mko_i63we-view"
          role="tabpanel"
        >
          <div>
            this is the first tab...
          </div>
        </div>
      </TabView>
      <TabView
        isActive={true}
        key="two"
        name="two"
      >
        <div
          aria-hidden={false}
          className="tab-view tab-view--active  mko_i63we-view  mko_i63we-view_active"
          role="tabpanel"
        >
          <div>
            ...and this is another tab
          </div>
        </div>
      </TabView>
    </div>
  </div>
</TabContainer>
`;

exports[`should pass isActive if child is function 1`] = `
<TabContainer
  activeTab={null}
  defaultTab={null}
>
  <div
    className="tabs  mko_i63we-container"
  >
    <ul
      className="tabs__controls  mko_i63we-controls"
      role="tablist"
    >
      <li
        className="tab-control  mko_i63we-tabControl"
        key="one"
        role="tab"
      >
        <Button
          className="tab-control__button"
          onClick={[Function]}
          type="button"
        >
          <button
            className="button ripple button--standard  mko_c5ujei-button  mko_c5ujei-button_standard tab-control__button"
            onClick={[Function]}
            type="button"
          >
            one
          </button>
        </Button>
      </li>
      <li
        className="tab-control tab-control--active  mko_i63we-tabControl  mko_i63we-tabControl_active"
        key="two"
        role="tab"
      >
        <Button
          className="tab-control__button"
          onClick={[Function]}
          type="button"
        >
          <button
            className="button ripple button--standard  mko_c5ujei-button  mko_c5ujei-button_standard tab-control__button"
            onClick={[Function]}
            type="button"
          >
            two
          </button>
        </Button>
      </li>
    </ul>
    <div
      className="tabs__panels  mko_i63we-panels"
    >
      <TabView
        isActive={false}
        key="one"
        name="one"
      >
        <div
          aria-hidden={true}
          className="tab-view  mko_i63we-view"
          role="tabpanel"
        />
      </TabView>
      <TabView
        isActive={true}
        key="two"
        name="two"
      >
        <div
          aria-hidden={false}
          className="tab-view tab-view--active  mko_i63we-view  mko_i63we-view_active"
          role="tabpanel"
        >
          <div>
            ...and this is another tab
          </div>
        </div>
      </TabView>
    </div>
  </div>
</TabContainer>
`;

exports[`should render with minimum props 1`] = `
<div
  className="tabs  mko_i63we-container"
>
  <ul
    className="tabs__controls  mko_i63we-controls"
    role="tablist"
  >
    <li
      className="tab-control  mko_i63we-tabControl"
      key="one"
      role="tab"
    >
      <Button
        className="tab-control__button"
        onClick={[Function]}
        type="button"
      >
        one
      </Button>
    </li>
    <li
      className="tab-control  mko_i63we-tabControl"
      key="two"
      role="tab"
    >
      <Button
        className="tab-control__button"
        onClick={[Function]}
        type="button"
      >
        two
      </Button>
    </li>
  </ul>
  <div
    className="tabs__panels  mko_i63we-panels"
  >
    <TabView
      isActive={false}
      key="one"
      name="one"
    >
      <div>
        this is the first tab...
      </div>
    </TabView>
    <TabView
      isActive={false}
      key="two"
      name="two"
    >
      <div>
        ...and this is another tab
      </div>
    </TabView>
  </div>
</div>
`;
